# easy_auther

./: .env.example  .gitignore  README.md  docker-compose.yml
ea_backend/: Cargo.toml  Dockerfile  README.md
ea_backend/src/: main.rs  model.rs  utils.rs
ea_backend/src/api/: group.rs  user.rs
ea_backend/src/api/group/: controller.rs  schema.rs
ea_backend/src/api/user/: controller.rs  schema.rs
ea_backend/src/group/: controller.rs  group.rs  mod.rs  token.rs
ea_backend/src/model/: config.rs  group.rs  user.rs
ea_backend/src/model/group/: repository.rs  schema.rs
ea_backend/src/model/user/: repository.rs  schema.rs
ea_backend/src/user/: controller.rs  mod.rs  user.rs
ea_backend/src/utils/: jwt.rs  middleware.rs
ea_frontend/: Dockerfile  README.md  deno.json  index.html  nginx.conf  tailwind.config.js  vite.config.mts
ea_frontend/src/: App.vue  main.ts  router.ts
ea_frontend/src/components/CreateBtn/: Form.vue  view.vue
ea_frontend/src/components/DeleteBtn/: Form.vue  view.vue
ea_frontend/src/components/Header/: view.vue
ea_frontend/src/components/SideBar/: view.vue
ea_frontend/src/components/UserTable/: view.vue
ea_frontend/src/components/common/: CreateForm.vue  ItemCard.vue  PemForm.vue
ea_frontend/src/components/pages/: CreateGroup.vue  Group.vue  Groups.vue  Login.vue
ea_frontend/src/plugins/: index.ts  vuetify.ts
ea_frontend/src/scripts/: api.ts  client.ts  const.ts  cookie.ts  types.ts
ea_frontend/src/scripts/apis/: client.ts  (+4 more)
ea_frontend/src/views/: CreateGroup.vue  GroupUsers.vue  Login.vue
postgresql/init/: init.sql
(+9 files in other folders)
